2021-03-14  Akira Kakuto  <kakuto@w32tex.org>

	* dvipdfmx.c: Do not allow directory separators in an optarg
	in an option -i optarg for security reason.

2021-03-05  Akira Kakuto  <kakuto@w32tex.org>

	* pdfdev.c: Correct the incomplete fix on 2021-03-04.
	* pdffont.c: Avoid unnecessary warnings, reported in
	https://tug.org/pipermail/dvipdfmx/2021-March/000242.html

2021-03-04  Akira Kakuto  <kakuto@w32tex.org>

	* pdfdev.c: Fix to call mktexpk with correct arguments when
	pdftex.map is used and type1 font is not found.
	Reported by Igor Liferenko:
	https://tug.org/pipermail/dvipdfmx/2021-March/000241.html
	* configure.ac: Version 20210304.

2021-02-12  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* dvi.c: Fix a bug (segfault) that current_font is not checked
	properly when catch_phantom=1.
	* configure.ac: Version 20210212.

2021-01-31  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* spc_misc.c: Processing of pdffontatrr special should be
	delayed until the end of the document since the font may not
	be loaded at the time this special is executed.

2021-01-26  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* dvipdfmx.c: Set the runtime flag suppressing error messages
	for kpathsea library when "-q" option is used.
	* dvipdfmx.c, xbb.c: Update copyright year.
	https://tug.org/pipermail/dvipdfmx/2021-January/000216.html

2021-01-24  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* spc_misc.c: Add a compatibility special pdffontattr.
	* configure.ac: Version 20210124.

2021-01-22  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* cidtype0.c: Fix the VORG bug reported in
	https://tug.org/pipermail/dvipdfmx/2021-January/000193.html
	* configure.ac: Version 20210122.

2021-01-16  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pdfximage.c: Dvipdfmx behavior changed. Now it stops
	processing and exits with non-zero exit status when image
	inclusion fails.
	* dvi.c: Ignore dvi_set with invalid gid when processing DVI
	files created by dvilua[la]tex.